[tool.poetry]
name = "masstld"
version = "0.11.2"
description = ""
authors = ["ItsNiceCraft <74358857+ItsNiceCraft@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dnspython = "^2.7.0"
rich = "^14.0.0"
requests = "^2.32.3"
mdutils = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
